--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -5,7 +5,7 @@ services:
     image: lolth.server.static
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.debug
     ports:
         - 8080:8080
     environment: 
